www/static/develop/css/css.css
/* ... */
.span-link{cursor: pointer;}
a{text-decoration: none;}
a:hover, .span-link:hover{ color: #D30000; -webkit-transition: color 0.3s;-moz-transition: color 0.3s;-o-transition: color 0.3s;transition: color 0.3s;}
body h1 {font-family: 'pt_sans_captionregular', Verdana, sans-serif; font-size: 18px;font-weight: normal;display: inline;}

h3, h2, strong, .bold {font-family: 'pt_sansbold', Verdana, sans-serif;}
.caption {font-family: 'pt_sans_captionregular', Verdana, sans-serif;}
.captionbold {font-family: 'pt_sans_captionbold', Verdana, sans-serif;}
.uppercase {text-transform: uppercase;}

/* css helpers */
.bg-color-crimson{background-color:#D90000}.border-color-crimson{border-color:#D90000}
.bg-color-blue{background-color: #2B587A;}.border-color-blue{border-color: #2B587A;}
.bg-color-gray{background-color:gray;}.border-color-gray{border-color:gray;}
.bg-color-lightgreen{background-color: #57A957}
.bg-color-lightorange{background-color: #FFC700;}
.bg-color-deepskyblue{background-color: deepskyblue}
.bg-color-whitesmoke{background-color: #f5f5f5}
.bg-color-yelgreen{background-color: #8EC745}.border-color-yelgreen{border-color: #8EC745;}
.bg-color-krayola{background-color: #12B0EC}.border-color-krayola{border-color: #12B0EC;}
.p5{padding:5px}.p10{padding:10px}.p15{padding:15px}
.white{color:white !important}.black{color:black !important}.red{color:red !important;}.green{color:green !important;}.gray{color:gray !important;}
.dib{display: inline-block}.db{display: block}
.br2{border-radius: 2px}.brt2{border-radius: 2px 2px 0 0}.brb2{border-radius: 0 0 2px 2px}.brl2{border-radius: 2px 0 0 2px}.brr2{border-radius: 0 2px 2px 0}
.br3{border-radius: 3px}.brt3{border-radius: 3px 3px 0 0}.brb3{border-radius: 0 0 3px 3px}.brl3{border-radius: 3px 0 0 3px}.brr3{border-radius: 0 3px 3px 0}
.ta-r{text-align: right;}.ta-l{text-align: left !important}.ta-c{text-align: center;}
.va-t{vertical-align: top}
.mh-style1{min-height: 590px;}
.relative{position: relative}
.clear{clear: both;}
.w100p{width: 100%;}
.fs12{font-size:12px;}.fs16{font-size: 18px}.fs20{font-size: 20px}
.p5{padding: 5px}.p10{padding:10px}.p15{padding:15px}.p20{padding:20px}
.whitespace{clear: left;}
.fixed{position: fixed;top: 0px;}
.pointer{cursor: pointer;}
.strike{text-decoration: line-through;}
.lh44{line-height: 44px;}
.fs14{font-size: 14px;}.fs16{font-size: 16px;}.fs18{font-size: 18px;}.fs22{font-size: 22px;}
.z1 {z-index: 1}.z2 {z-index: 2}.z100 {z-index: 100}.z101 {z-index: 101}.z200 {z-index: 200}.z201 {z-index: 201}.z300 {z-index: 300}.z301 {z-index: 301}.z400 {z-index: 400}.z401 {z-index: 401}.z500 {z-index: 500}.z501 {z-index: 501}z1000 {z-index: 1000}.z50 {z-index: 50}.z150 {z-index: 150}.z151 {z-index: 151}.z250 {z-index: 250}.z251 {z-index: 251}.z350 {z-index: 350}.z450 {z-index: 450}.z550 {z-index: 550}
/*
    z200 = black layer
    z300 = menus
    z301 = menus caption
    z400 = windows
 */
.min-content-height {min-height:500px;}
/* css helpers end */

/* mini-elements */
.button {cursor:pointer; text-align:center; border:0;display:inline-block;}
.button.bg-color-crimson:hover{background-color: #F98C8C;-webkit-transition: background-color 0.2s;-moz-transition: background-color 0.2s;-o-transition: background-color 0.2s;transition: background-color 0.2s;}
.button.bg-color-blue:hover{background-color: #4381AF;-webkit-transition: background-color 0.2s;-moz-transition: background-color 0.2s;-o-transition: background-color 0.2s;transition: background-color 0.2s;}
.button.bg-color-lightgreen:hover{background-color: #74DC74;-webkit-transition: background-color 0.2s;-moz-transition: background-color 0.2s;-o-transition: background-color 0.2s;transition: background-color 0.2s;}
.button.bg-color-lightorange:hover{background-color: #FDDA5D;-webkit-transition: background-color 0.2s;-moz-transition: background-color 0.2s;-o-transition: background-color 0.2s;transition: background-color 0.2s;}
.button.button-style1{padding: 7px 10px; color:#fff;display:inline-block;}
.button.button-style2{font-size: 18px;font-weight: 700;height: 30px;}

.clearfix:after{display: block;clear: both;height: 0;content: '';}
.rub {}
.link {color: #2a76a1;text-decoration: none;font-size: 14px;}
.caret {display: inline-block;width: 0;height: 0;margin-left: 2px;vertical-align: middle;border-top: 4px solid;border-right: 4px solid transparent;border-left: 4px solid transparent;}

input{background-color: #FFFFFF; outline: 0;}
input[type="text"], input[type="password"]{background-color: #FFFFFF;border: 1px solid #C3C3C3;font-size: 14px;height: 30px;padding:0px 10px;outline: 0; border-radius:2px;}
textarea{background-color: #FFFFFF;border: 1px solid #C3C3C3;font-size: 14px;padding: 5px 10px;outline: 0; border-radius:2px;}
select{background-color: #FFFFFF;border: 1px solid #C3C3C3;padding:2px 10px;height: 30px;outline: 0; border-radius:2px;}

.for-ie-msg-cont{text-align:center;padding:34px;font-size:20px; color:#fff; background-color: red;}
.for-ie-msg-cont a{font-size:20px; color: #fff;}

.required-label {position: absolute;top: 0;width: 230px;right: -230px;height: 25px}
.required-label .msg {position: absolute;top: 0;left: 5px;padding: 0px 10px;color: #fff;font-size: 14px; line-height: 25px;}
.required-label .msg:after {content: '';position: absolute;width: 0;height: 0;bottom: 10px;left: -5px;border-right: 5px solid #2B587A;border-top: 5px solid transparent;border-bottom: 5px solid transparent;top: 8px;}
/*.required-label .msg.bg-color-blue:after{}*/

.input-group {position: relative;display: table;border-collapse: separate;}
.input-group .form-control {display: table-cell;position: relative;float: left;width: 100%;margin-bottom: 0;border-right:0;}
.input-group .input-group-addon {width: 1%;white-space: nowrap;vertical-align: middle;display: table-cell;position: relative;}
.input-group .input-group-addon{height: 25px; width: 25px; text-align: center;border: 1px solid #C3C3C3;}
.input-group .input-group-addon:first-child{border-right: 0;}
/* ... */

